[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/monofonto rg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/hileMenusu/hileMenusu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.262745, 0.262745, 0.262745, 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -331.0
margin_top = -198.5
margin_right = 331.0
margin_bottom = 198.5

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -47.0
margin_right = 75.0
text = "Degisiklikleri onayla"

[node name="baslik" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.0
margin_right = 184.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Hile Menusu version 1.0"

[node name="dolarPanel" type="Panel" parent="Panel"]
margin_left = 40.0
margin_top = 149.0
margin_right = 296.0
margin_bottom = 227.0
custom_styles/panel = SubResource( 2 )

[node name="dolarBox" type="SpinBox" parent="Panel/dolarPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -12.0
margin_right = 37.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="Panel/dolarPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_right = 22.5
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "Dolar"

[node name="yemekPanel" type="Panel" parent="Panel"]
margin_left = 317.0
margin_top = 149.5
margin_right = 573.0
margin_bottom = 227.5
custom_styles/panel = SubResource( 2 )

[node name="yemekBox" type="SpinBox" parent="Panel/yemekPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -12.0
margin_right = 37.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="Panel/yemekPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_right = 22.5
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "Yemek"

[node name="enerjiPanel" type="Panel" parent="Panel"]
margin_left = 40.0
margin_top = 248.5
margin_right = 296.0
margin_bottom = 326.5
custom_styles/panel = SubResource( 2 )

[node name="enerjiBox" type="SpinBox" parent="Panel/enerjiPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -12.0
margin_right = 37.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="Panel/enerjiPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_right = 22.5
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "Enerji"

[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
